--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "chai": "^3.5.0",
+    "colors": "^1.1.2",
     "eslint": "^2.3.0",
     "eslint-plugin-babel": "^3.1.0",
     "eslint-plugin-classes": "^0.1.1",
