--- a/examples/blogs/package.json
+++ b/examples/blogs/package.json
@@ -4,8 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "babel-node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel index.js --out-file static/index.js",
+    "watch": "babel --watch index.js --out-file static/index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-relay-plugin": "^0.9.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-relay": "^0.9.0"
+  },
+  "dependencies": {
+    "express": "^4.13.4",
+    "gestalt": "file:../.."
+  }
 }
