--- a/examples/blogs/.babelrc
+++ b/examples/blogs/.babelrc
@@ -1,6 +1,10 @@
 {
   "presets": [
     "es2015",
-    "react"
-  ]
+    "stage-0",
+    "react",
+  ],
+  "plugins": [
+    "babel-relay-plugin-loader",
+  ],
 }
