--- a/examples/blogs/package.json
+++ b/examples/blogs/package.json
@@ -2,12 +2,11 @@
   "name": "blogs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "babel-node server.js",
+    "start": "nodemon --exec babel-node --ignore ./client/ ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel index.js --out-file static/index.js",
-    "watch": "babel --watch index.js --out-file static/index.js"
+    "build": "NODE_ENV=production webpack --config ./webpack.config.js --progress --profile --colors"
   },
   "author": "",
   "license": "ISC",
@@ -15,13 +14,29 @@
     "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-relay-plugin": "^0.9.0",
+    "babel-relay-plugin-loader": "^0.8.1",
+    "nodemon": "^1.9.2",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-relay": "^0.9.0"
+    "react-relay": "^0.9.0",
+    "react-router": "^2.4.1",
+    "react-router-relay": "^0.13.2",
+    "webpack": "^1.13.1"
   },
   "dependencies": {
+    "babel-loader": "^6.2.4",
+    "bcrypt-as-promised": "^1.1.0",
     "express": "^4.13.4",
-    "gestalt": "file:../.."
+    "gestalt": "file:../..",
+    "require-all": "^2.0.0",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
+  },
+  "metadata": {
+    "graphql": {
+      "schema": "./schema.json"
+    }
   }
 }
