--- a/packages/example-blogs/package.json
+++ b/packages/example-blogs/package.json
@@ -28,8 +28,7 @@
     "bcrypt-as-promised": "^1.1.0",
     "cors": "^2.7.1",
     "express": "^4.13.4",
-    "gestalt-server": "file:../..",
-    "require-all": "^2.0.0",
+    "import-all": "^1.0.1",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "gestalt-server": "^0.0.1",
