--- a/packages/gestalt-server/package.json
+++ b/packages/gestalt-server/package.json
@@ -2,7 +2,7 @@
   "name": "gestalt-server",
   "version": "0.0.1",
   "description": "schema defined graphql server",
-  "main": "src/gestalt.js",
+  "main": "src/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/charlieschwabacher/gestalt.git"
