--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-classes": "^0.1.1",
     "eslint-plugin-react": "^4.2.0",
     "express": "^4.13.4",
+    "express-graphql": "^0.5.3",
     "flow-bin": "^0.24.2",
     "graphql": "^0.6.0",
     "graphql-relay": "^0.4.2",
