--- a/packages/gestalt-cli/package.json
+++ b/packages/gestalt-cli/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/charlieschwabacher/gestalt.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "bin": {
     "gestalt": "src/index.js"
