--- a/packages/gestalt-cli/package.json
+++ b/packages/gestalt-cli/package.json
@@ -8,11 +8,23 @@
     "url": "https://github.com/charlieschwabacher/gestalt.git"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "gestalt": "gestalt"
   },
   "bin": {
     "gestalt": "src/index.js"
   },
   "author": "Charlie Schwabacher",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "change-case": "^2.3.1",
+    "commander": "^2.9.0",
+    "gestalt-graphql": "0.0.1",
+    "gestalt-postgres": "0.0.1",
+    "gestalt-utils": "0.0.1",
+    "graphql": "^0.6.0",
+    "import-all": "^1.0.1",
+    "prompt": "^1.0.0",
+    "rimraf": "^2.5.2"
+  }
 }
