--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "test": "mocha",
     "clear-root-modules": "rm -rf node_modules",
     "clear-package-modules": "find ./packages/*/node_modules -maxdepth 0 | xargs rm -rf",
-    "reset": "npm run clear-root-modules & npm run clear-package-modules & npm install & lerna bootstrap",
+    "reset": "npm run clear-root-modules & npm run clear-package-modules & npm install & lerna bootstrap"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
@@ -14,20 +14,13 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
-    "change-case": "^2.3.1",
-    "colors": "^1.1.2",
-    "dataloader": "^1.2.0",
     "eslint": "^2.3.0",
     "eslint-plugin-babel": "^3.1.0",
     "eslint-plugin-classes": "^0.1.1",
     "eslint-plugin-react": "^4.2.0",
-    "express": "^4.13.4",
-    "express-graphql": "^0.5.3",
     "flow-bin": "^0.24.2",
     "graphql": "^0.6.0",
-    "graphql-relay": "^0.4.2",
     "lerna": "2.0.0-beta.15",
-    "mocha": "^2.5.3",
-    "pluralize": "^2.0.0"
+    "mocha": "^2.5.3"
   }
 }
