--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "private": true,
   "scripts": {
+    "build": "lerna run build",
     "test": "mocha",
-    "clear-root-modules": "rm -rf node_modules",
+    "bootstrap": "lerna bootstrap",
     "clear-package-modules": "find ./packages/*/node_modules -maxdepth 0 | xargs rm -rf",
-    "reset": "npm run clear-root-modules & npm run clear-package-modules & npm install & lerna bootstrap"
+    "reset": "npm run clear-package-modules & npm run bootstrap",
+    "check": "flow check",
+    "lint": "eslint ./packages"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
@@ -20,7 +23,7 @@
     "eslint-plugin-react": "^4.2.0",
     "flow-bin": "^0.24.2",
     "graphql": "^0.6.0",
-    "lerna": "2.0.0-beta.15",
+    "lerna": "2.0.0-beta.20",
     "mocha": "^2.5.3"
   }
 }
