--- a/packages/gestalt-postgres/package.json
+++ b/packages/gestalt-postgres/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gestalt-postgres",
-  "version": "0.0.1",
-  "description": "PostgresQL database adapter for the gestalt framework",
+  "version": "0.0.2",
+  "description": "PostgreSQL database adapter for the gestalt framework",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
@@ -9,7 +9,6 @@
   },
   "scripts": {
     "test": "mocha",
-    "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "build": "babel src --out-dir lib/",
     "watch": "babel --watch src --out-dir lib/"
   },
