--- a/packages/gestalt-cli/package.json
+++ b/packages/gestalt-cli/package.json
@@ -32,5 +32,8 @@
     "prompt": "^1.0.0",
     "rimraf": "^2.5.2",
     "semver": "^5.1.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.10.1"
   }
 }
