--- a/packages/gestalt-utils/package.json
+++ b/packages/gestalt-utils/package.json
@@ -19,6 +19,7 @@
     "change-case": "^2.3.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.10.1",
     "dataloader": "^1.2.0",
     "graphql": "^0.6.0",
     "graphql-relay": "^0.4.2"
