add description to gestalt-graphql package

--- a/packages/gestalt-graphql/package.json
+++ b/packages/gestalt-graphql/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gestalt-graphql",
   "version": "0.0.7",
-  "description": "",
+  "description": "generates a GraphQL schema with resolution based on a definition using the GraphQL schema language.",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
