add readmeFilename to package.json files to try to force npm to update package pages

--- a/packages/gestalt-graphql/package.json
+++ b/packages/gestalt-graphql/package.json
@@ -2,6 +2,7 @@
   "name": "gestalt-graphql",
   "version": "0.0.8",
   "description": "generates a GraphQL schema with resolution based on a definition using the GraphQL schema language.",
+  "readmeFilename": "README.md",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
