--- a/packages/gestalt-cli/package.json
+++ b/packages/gestalt-cli/package.json
@@ -2,6 +2,7 @@
   "name": "gestalt-cli",
   "version": "0.0.8",
   "description": "command line tools for the gestalt framework",
+  "readmeFilename": "README.md",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
