--- a/packages/gestalt-server/package.json
+++ b/packages/gestalt-server/package.json
@@ -2,6 +2,7 @@
   "name": "gestalt-server",
   "version": "0.0.8",
   "description": "schema defined graphql server",
+  "readmeFilename": "README.md",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
