--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "build": "lerna run build",
     "test": "mocha",
     "bootstrap": "lerna bootstrap",
-    "clear-package-modules": "find ./packages/*/node_modules -maxdepth 0 | xargs rm -rf",
-    "reset": "npm run clear-package-modules & npm run bootstrap",
+    "clean": "lerna clean",
     "check": "flow check",
     "lint": "eslint ./packages"
   },
