--- a/packages/gestalt-graphql/package.json
+++ b/packages/gestalt-graphql/package.json
@@ -15,7 +15,8 @@
   "author": "Charlie Schwabacher",
   "license": "ISC",
   "dependencies": {
-    "change-case": "^2.3.1",
+    "camel-case": "^3.0.0",
+    "constant-case": "^2.0.0",
     "graphql": "^0.6.0",
     "graphql-relay": "^0.4.2",
     "gestalt-utils": "^0.0.11"
