--- a/packages/gestalt-postgres/package.json
+++ b/packages/gestalt-postgres/package.json
@@ -15,11 +15,12 @@
   "author": "Charlie Schwabacher",
   "license": "MIT",
   "dependencies": {
-    "change-case": "^2.3.1",
+    "camel-case": "^3.0.0",
     "dataloader": "^1.2.0",
+    "gestalt-utils": "^0.0.11",
     "pg": "^4.5.6",
     "pluralize": "^2.0.0",
-    "gestalt-utils": "^0.0.11"
+    "snake-case": "^2.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
