--- a/packages/gestalt-utils/package.json
+++ b/packages/gestalt-utils/package.json
@@ -16,7 +16,7 @@
   "author": "Charlie Schwabacher",
   "license": "MIT",
   "dependencies": {
-    "change-case": "^2.3.1"
+    "camel-case": "^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
