--- a/packages/gestalt-utils/package.json
+++ b/packages/gestalt-utils/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "mocha",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
-    "build": "babel src --out-dir lib/",
+    "build": "babel src --out-dir lib/ && npm run build-dot-flow",
+    "build-dot-flow": "find ./src -name '*.js' | while read filepath; do cp $filepath `echo $filepath | sed 's/\\\/src\\\//\\\/lib\\\//g'`.flow; done",
     "watch": "babel --watch src --out-dir lib/"
   },
   "author": "Charlie Schwabacher",
