update lerna version

--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,4 @@
 {
-  "lerna": "2.0.0-beta.19",
-  "version": "0.0.17",
-  "linkedFiles": {
-    "prefix": "// @flow\n"
-  }
+  "lerna": "2.0.0-beta.28",
+  "version": "0.0.17"
 }
