--- a/packages/blogs-example/package.json
+++ b/packages/blogs-example/package.json
@@ -7,26 +7,26 @@
     "build": "NODE_ENV=production webpack --config ./webpack.config.js --progress --profile --colors"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-relay-plugin": "^0.9.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-relay-plugin": "^0.9.3",
     "babel-relay-plugin-loader": "^0.8.1",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-relay": "^0.9.0",
-    "react-router": "^2.4.1",
-    "react-router-relay": "^0.13.2"
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-relay": "^0.9.3",
+    "react-router": "^2.8.1",
+    "react-router-relay": "^0.13.8"
   },
   "dependencies": {
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^6.4.1",
     "bcrypt-as-promised": "^1.1.0",
-    "express": "^4.13.4",
-    "import-all": "^1.0.1",
-    "webpack": "^1.13.1",
+    "express": "^4.15.4",
+    "gestalt-postgres": "^0.0.19",
     "gestalt-server": "^0.0.19",
-    "gestalt-postgres": "^0.0.19"
+    "import-all": "^1.0.1",
+    "webpack": "^1.15.0"
   },
   "metadata": {
     "graphql": {
